--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.0",
     "lucide-react": "^0.445.0",
     "pg": "^8.13.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sequelize": "^6.37.3"
