--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "reactjs-popup": "^2.0.6",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
